--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "jquery": "~1.11.1",
     "modernizr": "~2.8.2",
     "paper": "~0.9.20",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "dat.gui": "*"
   }
 }
